// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render DatasetItemsList correctly sortField equal title 1`] = `
<div>
  <div
    className="d-flex mb-3"
  >
    <button
      className="fdk-button fdk-button-cta"
      onClick={[Function]}
    >
      <i
        className="fa fa-plus fdk-color0 mr-2"
      />
      Legg til ny datasettbeskrivelse
    </button>
    <button
      className="ml-2 transparentButton"
      onClick={[Function]}
    >
      <i
        className="fa fa-plus fdk-color1 mr-2"
      />
      Importer datasett
    </button>
  </div>
  <ListItems
    catalogId="123"
    items={null}
    onSortField={[Function]}
    sortField="title"
    sortType=""
  />
  <AppImportModal
    body="DCAT-modellen som blir importert må inneholde en katalog som har samme organisasjonsnr som katalogen du redigerer. Kun datasett som er med i denne katalogen vil bli importert."
    btnCancel="Avbryt"
    btnConfirm="Importer"
    className={null}
    handleAction={[Function]}
    modal={false}
    setURL="Angi url til DCAT ressurs:"
    title="Importer datasett fra DCAT RDF ressurs."
    toggle={[Function]}
  />
</div>
`;

exports[`should render DatasetItemsList correctly sortField equal title 2`] = `
<div>
  <div
    className="d-flex mb-3"
  >
    <button
      className="fdk-button fdk-button-cta"
      onClick={[Function]}
    >
      <i
        className="fa fa-plus fdk-color0 mr-2"
      />
      Legg til ny datasettbeskrivelse
    </button>
    <button
      className="ml-2 transparentButton"
      onClick={[Function]}
    >
      <i
        className="fa fa-plus fdk-color1 mr-2"
      />
      Importer datasett
    </button>
  </div>
  <ListItems
    catalogId="123"
    items={null}
    onSortField={[Function]}
    sortField="registrationStatus"
    sortType=""
  />
  <AppImportModal
    body="DCAT-modellen som blir importert må inneholde en katalog som har samme organisasjonsnr som katalogen du redigerer. Kun datasett som er med i denne katalogen vil bli importert."
    btnCancel="Avbryt"
    btnConfirm="Importer"
    className={null}
    handleAction={[Function]}
    modal={false}
    setURL="Angi url til DCAT ressurs:"
    title="Importer datasett fra DCAT RDF ressurs."
    toggle={[Function]}
  />
</div>
`;

exports[`should render DatasetItemsList correctly with datasetItems 1`] = `
<div>
  <div
    className="d-flex mb-3"
  >
    <button
      className="fdk-button fdk-button-cta"
      onClick={[Function]}
    >
      <i
        className="fa fa-plus fdk-color0 mr-2"
      />
      Legg til ny datasettbeskrivelse
    </button>
    <button
      className="ml-2 transparentButton"
      onClick={[Function]}
    >
      <i
        className="fa fa-plus fdk-color1 mr-2"
      />
      Importer datasett
    </button>
  </div>
  <ListItems
    catalogId="123"
    items={null}
    onSortField={[Function]}
    sortField=""
    sortType=""
  />
  <AppImportModal
    body="DCAT-modellen som blir importert må inneholde en katalog som har samme organisasjonsnr som katalogen du redigerer. Kun datasett som er med i denne katalogen vil bli importert."
    btnCancel="Avbryt"
    btnConfirm="Importer"
    className={null}
    handleAction={[Function]}
    modal={false}
    setURL="Angi url til DCAT ressurs:"
    title="Importer datasett fra DCAT RDF ressurs."
    toggle={[Function]}
  />
</div>
`;

exports[`should render DatasetItemsList correctly with missing datasetItems 1`] = `
<div>
  <div
    className="d-flex mb-3"
  >
    <button
      className="fdk-button fdk-button-cta"
      onClick={[Function]}
    >
      <i
        className="fa fa-plus fdk-color0 mr-2"
      />
      Legg til ny datasettbeskrivelse
    </button>
    <button
      className="ml-2 transparentButton"
      onClick={[Function]}
    >
      <i
        className="fa fa-plus fdk-color1 mr-2"
      />
      Importer datasett
    </button>
  </div>
  <ListItems
    catalogId="123"
    items={null}
    onSortField={[Function]}
    sortField=""
    sortType=""
  />
  <AppImportModal
    body="DCAT-modellen som blir importert må inneholde en katalog som har samme organisasjonsnr som katalogen du redigerer. Kun datasett som er med i denne katalogen vil bli importert."
    btnCancel="Avbryt"
    btnConfirm="Importer"
    className={null}
    handleAction={[Function]}
    modal={false}
    setURL="Angi url til DCAT ressurs:"
    title="Importer datasett fra DCAT RDF ressurs."
    toggle={[Function]}
  />
</div>
`;

exports[`should render DatasetItemsList correctly with missing items 1`] = `
<div>
  <div
    className="d-flex mb-3"
  >
    <button
      className="fdk-button fdk-button-cta"
      onClick={[Function]}
    >
      <i
        className="fa fa-plus fdk-color0 mr-2"
      />
      Legg til ny datasettbeskrivelse
    </button>
    <button
      className="ml-2 transparentButton"
      onClick={[Function]}
    >
      <i
        className="fa fa-plus fdk-color1 mr-2"
      />
      Importer datasett
    </button>
  </div>
  <ListItems
    catalogId="123"
    items={null}
    onSortField={[Function]}
    sortField=""
    sortType=""
  />
  <AppImportModal
    body="DCAT-modellen som blir importert må inneholde en katalog som har samme organisasjonsnr som katalogen du redigerer. Kun datasett som er med i denne katalogen vil bli importert."
    btnCancel="Avbryt"
    btnConfirm="Importer"
    className={null}
    handleAction={[Function]}
    modal={false}
    setURL="Angi url til DCAT ressurs:"
    title="Importer datasett fra DCAT RDF ressurs."
    toggle={[Function]}
  />
</div>
`;
